--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_auth: ^5.1.4 
   curved_navigation_bar: ^1.0.6
   cloud_firestore: ^5.2.1
+  provider: ^6.1.2
+  like_button: ^2.0.5
+  awesome_snackbar_content: ^0.1.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/Opinio_Images/
+    - lib/carousel_images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
