--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   like_button: ^2.0.5
   awesome_snackbar_content: ^0.1.3
   carousel_slider: ^5.0.0
+  firebase_database: ^11.1.4
 
 dev_dependencies:
   flutter_test:
