--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.3
   carousel_slider: ^5.0.0
   firebase_database: ^11.1.4
+  fl_chart: ^0.69.0
   intl: 
 
 dev_dependencies:
