--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_database: ^11.1.4
   fl_chart: ^0.69.0
   intl: 
+  google_generative_ai: ^0.4.6
+  flutter_markdown: ^0.6.15
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +75,7 @@ flutter:
   assets:
     - lib/Opinio_Images/
     - lib/carousel_images/
+    - env.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
