--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
   errors:
     prefer_const_constructors: ignore
     unused_element: ignore
+    unused_import: ignore
     unused_local_variable: ignore
 include: package:flutter_lints/flutter.yaml
 
